WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
237922
REGRESSION (
r291191
): [iOS] ASSERTION FAILED: m_contentsBufferHandle in WebKit::RemoteLayerBackingStore::paintContents()
https://bugs.webkit.org/show_bug.cgi?id=237922
Summary
REGRESSION (r291191): [iOS] ASSERTION FAILED: m_contentsBufferHandle in WebKi...
Robert Jenner
Reported
2022-03-15 14:47:18 PDT
We're seeing the following assertion on quite a few WebGL tests here:
https://build.webkit.org/results/Apple-iOS-15-Simulator-Debug-WK2-Tests/r291304%20(1950)/results.html
ASSERTION FAILED: m_contentsBufferHandle /Volumes/Data/worker/ios-simulator-15-debug/build/Source/WebKit/Shared/RemoteLayerTree/RemoteLayerBackingStore.mm(355) : void WebKit::RemoteLayerBackingStore::paintContents() 1 0x6b2606769 WTFCrash 2 0x694cfbfeb WTFCrashWithInfo(int, char const*, char const*, int) 3 0x6959c727d WebKit::RemoteLayerBackingStore::paintContents() 4 0x695a1e5d7 WebKit::RemoteLayerBackingStoreCollection::paintReachableBackingStoreContents() 5 0x69662609f WebKit::RemoteLayerTreeContext::buildTransaction(WebKit::RemoteLayerTreeTransaction&, WebCore::PlatformCALayer&) 6 0x69529a499 WebKit::RemoteLayerTreeDrawingArea::updateRendering() 7 0x6952a3a0e decltype(*(std::__1::forward<WebKit::RemoteLayerTreeDrawingArea*&>(fp0)).*fp()) std::__1::__invoke<void (WebKit::RemoteLayerTreeDrawingArea::*&)(), WebKit::RemoteLayerTreeDrawingArea*&, void>(void (WebKit::RemoteLayerTreeDrawingArea::*&)(), WebKit::RemoteLayerTreeDrawingArea*&) 8 0x6952a398d std::__1::__bind_return<void (WebKit::RemoteLayerTreeDrawingArea::*)(), std::__1::tuple<WebKit::RemoteLayerTreeDrawingArea*>, std::__1::tuple<>, __is_valid_bind_return<void (WebKit::RemoteLayerTreeDrawingArea::*)(), std::__1::tuple<WebKit::RemoteLayerTreeDrawingArea*>, std::__1::tuple<> >::value>::type std::__1::__apply_functor<void (WebKit::RemoteLayerTreeDrawingArea::*)(), std::__1::tuple<WebKit::RemoteLayerTreeDrawingArea*>, 0ul, std::__1::tuple<> >(void (WebKit::RemoteLayerTreeDrawingArea::*&)(), std::__1::tuple<WebKit::RemoteLayerTreeDrawingArea*>&, std::__1::__tuple_indices<0ul>, std::__1::tuple<>&&) 9 0x6952a3940 std::__1::__bind_return<void (WebKit::RemoteLayerTreeDrawingArea::*)(), std::__1::tuple<WebKit::RemoteLayerTreeDrawingArea*>, std::__1::tuple<>, __is_valid_bind_return<void (WebKit::RemoteLayerTreeDrawingArea::*)(), std::__1::tuple<WebKit::RemoteLayerTreeDrawingArea*>, std::__1::tuple<> >::value>::type std::__1::__bind<void (WebKit::RemoteLayerTreeDrawingArea::*&)(), WebKit::RemoteLayerTreeDrawingArea*>::operator()<>() 10 0x6952a38d9 WTF::Detail::CallableWrapper<std::__1::__bind<void (WebKit::RemoteLayerTreeDrawingArea::*&)(), WebKit::RemoteLayerTreeDrawingArea*>, void>::call() 11 0x694d55fc2 WTF::Function<void ()>::operator()() const 12 0x69529f259 WebCore::Timer::fired() 13 0x6de73bfa6 WebCore::ThreadTimers::sharedTimerFiredInternal() 14 0x6de7468c1 WebCore::ThreadTimers::setSharedTimer(WebCore::SharedTimer*)::$_0::operator()() const 15 0x6de746859 WTF::Detail::CallableWrapper<WebCore::ThreadTimers::setSharedTimer(WebCore::SharedTimer*)::$_0, void>::call() 16 0x6da01e232 WTF::Function<void ()>::operator()() const 17 0x6de6d87e1 WebCore::MainThreadSharedTimer::fired() 18 0x6de7d0276 WebCore::timerFired(__CFRunLoopTimer*, void*) 19 0x7fff2036a6c6 __CFRUNLOOP_IS_CALLING_OUT_TO_A_TIMER_CALLBACK_FUNCTION__ 20 0x7fff2036a1c2 __CFRunLoopDoTimer 21 0x7fff20369781 __CFRunLoopDoTimers 22 0x7fff20363dc0 __CFRunLoopRun 23 0x7fff20363103 CFRunLoopRunSpecific 24 0x7fff2081941c -[NSRunLoop(NSRunLoop) runMode:beforeDate:] 25 0x7fff20819638 -[NSRunLoop(NSRunLoop) run] 26 0x7fff2006705f _xpc_objc_main 27 0x7fff20069050 xpc_main 28 0x6959c4f3a WebKit::XPCServiceMain(int, char const**) 29 0x697985ecb WKXPCServiceMain 30 0x101e65d12 main 31 0x680001e1e com.apple.WebKit.WebContent.Development terminated (pid 139) because the process crashed
Attachments
Patch
(1.90 KB, patch)
2022-03-15 20:56 PDT
,
Simon Fraser (smfr)
no flags
Details
Formatted Diff
Diff
Patch
(1.84 KB, patch)
2022-03-15 21:17 PDT
,
Simon Fraser (smfr)
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2022-03-15 14:47:36 PDT
<
rdar://problem/90331880
>
Simon Fraser (smfr)
Comment 2
2022-03-15 15:23:36 PDT
Regressed between
r291190
and
r291201
Simon Fraser (smfr)
Comment 3
2022-03-15 15:26:24 PDT
https://trac.webkit.org/log/webkit/trunk?mode=follow_copy&rev=291201&stop_rev=291190
so probably
https://trac.webkit.org/changeset/291191/webkit/trunk
Simon Fraser (smfr)
Comment 4
2022-03-15 20:48:01 PDT
Just a bad assertion.
Simon Fraser (smfr)
Comment 5
2022-03-15 20:56:44 PDT
Created
attachment 454792
[details]
Patch
Simon Fraser (smfr)
Comment 6
2022-03-15 21:17:54 PDT
Created
attachment 454794
[details]
Patch
Geoffrey Garen
Comment 7
2022-03-15 21:31:27 PDT
Comment on
attachment 454794
[details]
Patch r=me
EWS
Comment 8
2022-03-15 23:08:38 PDT
Committed
r291333
(
248472@main
): <
https://commits.webkit.org/248472@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 454794
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug