REGRESSION (r291191): [iOS] ASSERTION FAILED: m_contentsBufferHandle in WebKit::RemoteLayerBackingStore::paintContents() https://bugs.webkit.org/show_bug.cgi?id=237922

Reviewed by Geoffrey Garen.

The assertion added in r291191 is incorrect. With that change, we end up calling
RemoteLayerBackingStore::paintContents() on WebGL layers (which use delegated display)
when we used to just early return from display(). So it's OK for m_frontBuffer.imageBuffer
to be null on these layers.

* Shared/RemoteLayerTree/RemoteLayerBackingStore.mm:
(WebKit::RemoteLayerBackingStore::paintContents):



Canonical link: https://commits.webkit.org/248472@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@291333 268f45cc-cd09-0410-ab3c-d52691b4dbfc